--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "test": "vitest"
   },
   "dependencies": {
-    "probot": "^13.0.1"
+    "@octokit/rest": "^21.0.1",
+    "express": "^4.19.2",
+    "ngrok": "^5.0.0-beta.2",
+    "probot": "^13.3.6"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.12",
     "nock": "^14.0.0-beta.5",
     "smee-client": "^2.0.0",
-    "vitest": "^1.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": ">= 18"
